# airlock

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  implementation-notes.md  justfile
.github/workflows/: docker-build.yml
backend/: .env.example  llm_settings.py  pyproject.toml  requirements.txt  server.py
backend/agents/: base_agent.py  daisy.py  flint.py  nova.py
backend/game/: alibi_generator.py  game_state.py  orchestrator.py  suspicion_engine.py
backend/game/orchestrator/: __init__.py  core.py  reveal.py  scheduling.py  streaming.py
backend/routes/: voice.py
frontend/: eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  ChatHeader.tsx  ChatInput.tsx  EjectModal.tsx  Intro.tsx  Message.tsx  SuspicionPanel.tsx  SystemMessages.tsx  VoiceButton.tsx  chatConstants.ts
frontend/src/hooks/: useAudio.ts  useTokenDrain.ts  useWebSocket.ts
frontend/src/types/: index.ts
