[project]
name = "airlock-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "websockets==13.1",
    "openai==1.59.3",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.20",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.2",
]
